--- a/src/contact.html
+++ b/src/contact.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <title>Contact | ACSEO</title>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ACSEO est une agence web et mobile, propose de solutions numériques sur mesure">
-    <meta name="keywords" content="html, css, javascript">
+    <meta name="keywords" content="ACSEO, php, html, css, javascript">
+    <meta property="og:site_name" content="ACSEO">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/style.css">
-    <title>Contact ACSEO</title>
   </head>
   <body>
     <div class="header-top bg-white">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
+          <a class="navbar-brand logo-img" href="index.html"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand logo-img" href="index.html"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
-          <a href="#" class="icone-mail-phone"><img src="assets/images/mail.png" alt="" srcset=""></a>   
           <div class="collapse navbar-collapse hover-dropdown font-14 ml-auto bloc-menu-navigation" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -48,99 +50,113 @@
         </nav>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-8">
+    <div class="container form-container">
+      <div class="row mt-5">
+        <div class="col-8 form-contact">
           <h1>Contact</h1>
-          <p>Construisons ensemble votre projet</p>
+          <h3>Construisons ensemble votre projet</h3>
+          <p>Les champs <span class="pink">*</span> sont obligatoires</p>
           <form method="POST" action="#">
-            <div class="mb-3">
-              <label for="" class="form-label">Nom</label>
-              <input type="text" class="form-control" id="">
+            <div class="row mb-4">
+              <div class="col from-group">
+                <label for="" class="form-label">Nom/Prénom<span class="pink">*</span> </label>
+                <input type="text" class="form-control" id="">
+              </div>
             </div>
-            <div class="mb-3 bloc-tel-mail">
-              <div>
+            <div class="row bloc-tel mb-4">
+              <div class="form-group col">
                 <label for="" class="form-label">Téléphone</label>
                 <input type="text" class="form-control" id="">
               </div>
-              <div>
-                <label for="" class="form-label">E-mail</label>
+              <div class="form-group col">
+                <label for="" class="form-label">E-mail<span class="pink">*</label></span>
                 <input type="email" class="form-control" id="">
               </div>
             </div>
-            <div class="mb-3">
-              <label for="" class="form-label">Sujet de votre message</label>
-              <input type="text" class="form-control" id="">
+            <div class="row mb-4">
+              <div class="col from-group">
+                <label for="" class="form-label">Sujet de votre Message<span class="pink">*</span></label>
+                <input type="text" class="form-control" id="">
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="" class="form-label">Message</label><br>
-              <textarea name="" id="" cols="85" rows="10"></textarea>
+            <div class="row mb-3">
+              <div class="col">
+                <label for="" class="form-label">Message<span class="pink">*</span></label><br/>
+                <textarea name="" id="" cols="30" rows="10" class="form-control w-100"></textarea>
+              </div>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Submit</button>
+            <button type="submit" class="btn btn-primary w-100">Envoyer</button>
           </form>
         </div>
-        <div class="col-4">
-          <div>
-            <img src="assets/images/logo.png" alt="Logo ACSEO" srcset="">
-            <select class="form-select" aria-label="Default select example">
+        <div class="col-4 mt-5 text-center bloc-infos">
+          <div class="bg-body-tertiary">
+            <img class="logo-acseo" src="assets/images/logo.png" alt="Logo ACSEO" srcset="">
+            <select class="form-select list" aria-label="Default select example">
               <option selected><strong>AIX-EN-PROVENCE</strong></option>
               <option value="1">MONTPELLIER</option>
               <option value="2">PARIS</option>
             </select>
-            <h5>ADRESSE</h5>
-            <p>060 rue René Descartes <br/>13290 | Aix-en-Provence</p>
-            <h5>ADRESSE</h5>
-            <p>04 42 38 20 48</p>
-            <div>
-              <img src="assets/images/icones/facebook.png" alt="Icone Facebook" srcset="">
-              <img src="assets/images/icones/twitter.png" alt="Icone Twitter" srcset="">
-              <img src="assets/images/icones/linkedin.png" alt="Icone LinkedIn" srcset="">
-              <img src="assets/images/icones/mail.png" alt="Icone Email" srcset="">
+            <div class="coordonnes">
+              <h5>ADRESSE</h5>
+              <p>1060 rue René Descartes <br/>13290 | Aix-en-Provence</p>
+            </div>
+            <div class="coordonnes">
+              <h5>ADRESSE</h5>
+              <p>04 42 38 20 48</p>
+            </div>
+            <div class="socil-media">
+              <a href="#"><img src="assets/images/icones/facebook.png" alt="Icone Facebook" srcset=""></a>
+              <a href="#"><img src="assets/images/icones/twitter.png" alt="Icone Twitter" srcset=""></a>
+              <a href="#"><img src="assets/images/icones/linkedin.png" alt="Icone LinkedIn" srcset=""></a>
+              <a href="#"><img src="assets/images/icones/mail.png" alt="Icone Email" srcset=""></a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!--Bloc Idée/Projet -->
-    <div class="container text-center">
-      <img class="d-bloc mt-5"src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
-      <h2 class="mt-3">Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
-      <p class="my-5"><a href="#" class="pink-button">Contactez-nous</a></p>
-    </div>
-    <!--End Bloc Idée/Projet -->
+    <section class="bg-body-tertiary mt-5 last-container heading">
+      <div class="container text-center">
+        <img class="d-bloc mt-5"src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
+        <h2 class="mt-3">ACSEO RECRUTE <br/> Découvrez toutes nos offres d'emplois <br/>et postulez directement ici</h2>
+        <p class="mt-5 mb-0 pb-5"><a href="#" class="pink-button text-white">Nous rejoindre</a></p>
+      </div>
+    </section>
 
     <!--Footer-->
     <footer>
       <div class="container">
         <div class="row container-footer">
-          <div class="col bloc-col-footer">
+          <div class="col bloc-col-footer col-logo">
             <img src="assets/images/logo-footer.png" alt="Logo d'ACSEO dans le footer" srcset=""><br /><br>
             <p><strong>SIÈGE SOCIAL</strong> <br />1060 rue René Descartes <br />13290 | Aix-en-Provence <br/>04 42 38 70 46</p>
-            <i>Icones a venir</i>
+            <div class="socil-media-footer">
+              <a href="#"><img src="assets/images/linkedin.png" alt="Icone LinkedIn" srcset=""></a>
+              <a href="#"><img src="assets/images/mail.png" alt="Icone Email" srcset=""></a>
+            </div>
           </div>
           <div class="col bloc-col-footer">
             <h5>À PROPOS</h5>
-            <p><a href="#">Technologies & CMS</a></p>
-            <p><a href="#">Réalisations</a></p>
-            <p><a href="#">Blog</a></p>
-            <p><a href="#">Contactez-nous</a></p>
-            <p><a href="#">Nous rejoindre</a></p>
+            <p><a href="technos.html">Technologies & CMS</a></p>
+            <p><a href="realisations.html">Réalisations</a></p>
+            <p><a href="blog.html">Blog</a></p>
+            <p><a href="contact.html">Contactez-nous</a></p>
+            <p><a href="contact.html">Nous rejoindre</a></p>
           </div>
           <div class="col bloc-col-footer">
             <h5>EXPERTISES</h5>
-            <p><a href="#">Conseil en stratégie digitale</a></p>
-            <p><a href="#">Design et UX</a></p>
-            <p><a href="#">Développement web</a></p>
-            <p><a href="#">Application mobile</a></p>
-            <p><a href="#">E-commerce</a></p>
+            <p><a href="expertise.html">Conseil en stratégie digitale</a></p>
+            <p><a href="expertise.html">Design et UX</a></p>
+            <p><a href="expertise.html">Développement web</a></p>
+            <p><a href="expertise.html">Application mobile</a></p>
+            <p><a href="expertise.html">E-commerce</a></p>
           </div>
           <div class="col last-col-footer">
             <h5>LES AGENCES ACSEO</h5>
-            <p><a href="#">L'agence d'Aix-en-Provence</a></p>
-            <p><a href="#">L'agence de Paris</a></p>
-            <p><a href="#">L'agence de Montpellier</a></p>
-            <p><a href="#">Équipe</a></p>
+            <p><a href="agences.html">L'agence d'Aix-en-Provence</a></p>
+            <p><a href="agences.html">L'agence de Paris</a></p>
+            <p><a href="agences.html">L'agence de Montpellier</a></p>
+            <p><a href="equipe.html">Équipe</a></p>
           </div>
         </div>
       </div>
@@ -170,3 +186,4 @@
     <script type="text/javascript" src="../dist/assets/js/carousel-slick.js"></script>
   </body>
 </html>
+
