--- a/src/equipe.html
+++ b/src/equipe.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <title>Equipe | ACSEO</title>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ACSEO est une agence web et mobile, propose de solutions numériques sur mesure">
-    <meta name="keywords" content="html, css, javascript">
+    <meta name="keywords" content="ACSEO, php, html, css, javascript">
+    <meta property="og:site_name" content="ACSEO">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/style.css">
-    <title>Page d'accueil ACSEO</title>
   </head>
   <body>
     <div class="header-top bg-white">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
+          <a class="navbar-brand logo-img" href="index.html"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand logo-img" href="index.html"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
-          <a href="#" class="icone-mail-phone"><img src="assets/images/mail.png" alt="" srcset=""></a>   
           <div class="collapse navbar-collapse hover-dropdown font-14 ml-auto bloc-menu-navigation" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -60,8 +62,8 @@
       </div>
     </div>
 
-    <div class="container text-center">
-      <h2 class="blue-bar-title mt-5 pt-5">Les CMS</h2>
+    <div class="container text-center heading">
+      <h2 class="mt-5 pt-5">Qui sommes-nous ?</h2>
       <p class="text-center">ACSEO, c'est l'histoire de 4 ingénieurs en informatique qui ont décidé que la technique ne suffisait pas pour réussir les projets. </p>
       <p class="text-center">Travailler chez ACSEO, c'est avoir un quotidien rempli de nouvelles technologies pas parce que c'est cool, mais parce que ça répond au besoin du client. C'est proposer la bonne solution au client, de sa conception à sa mise en oeuvre. C'est aussi un mode de gestion ouvert, où chacun à sa place dans l'équipe, et où les possibilités de progression sont sans limites : devenir un expert, ouvrir une agence à l'étranger ou même créer sa startup...</p>
     </div>
@@ -78,72 +80,72 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row">
+      <div class="row team-members">
         <div class="col p-0 d-flex">
           <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Axelle.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Grégory.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Jennifer.png" alt="Photo" srcset="">
         </div>
       </div>
-      <div class="row">
+      <div class="row team-members">
         <div class="col p-0 d-flex">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Kévin.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Matthieu.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Nicolas.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Steven.png" alt="Photo" srcset="">
         </div>
       </div>
-      <div class="row">
+      <div class="row team-members">
         <div class="col p-0 d-flex">
           <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
-          <img class="p-0 w-25" src="assets/images/equipe/Alexis.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Grégory.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Axelle.png" alt="Photo" srcset="">
+          <img class="p-0 w-25" src="assets/images/equipe/Kévin.png" alt="Photo" srcset="">
         </div>
       </div>
     </div>
-
    
-    <div class="container text-center last-container">
+    <div class="container text-center last-container heading">
       <img class="d-bloc mt-5"src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
       <h2 class="mt-3">Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
       <p class="my-5"><a href="#" class="pink-button text-white">Contactez-nous</a></p>
     </div>
 
-    
-
     <!--Footer-->
     <footer>
       <div class="container">
         <div class="row container-footer">
-          <div class="col bloc-col-footer">
+          <div class="col bloc-col-footer col-logo">
             <img src="assets/images/logo-footer.png" alt="Logo d'ACSEO dans le footer" srcset=""><br /><br>
             <p><strong>SIÈGE SOCIAL</strong> <br />1060 rue René Descartes <br />13290 | Aix-en-Provence <br/>04 42 38 70 46</p>
-            <i>Icones a venir</i>
+            <div class="socil-media-footer">
+              <a href="#"><img src="assets/images/linkedin.png" alt="Icone LinkedIn" srcset=""></a>
+              <a href="#"><img src="assets/images/mail.png" alt="Icone Email" srcset=""></a>
+            </div>
           </div>
           <div class="col bloc-col-footer">
             <h5>À PROPOS</h5>
-            <p><a href="#">Technologies & CMS</a></p>
-            <p><a href="#">Réalisations</a></p>
-            <p><a href="#">Blog</a></p>
-            <p><a href="#">Contactez-nous</a></p>
-            <p><a href="#">Nous rejoindre</a></p>
+            <p><a href="technos.html">Technologies & CMS</a></p>
+            <p><a href="realisations.html">Réalisations</a></p>
+            <p><a href="blog.html">Blog</a></p>
+            <p><a href="contact.html">Contactez-nous</a></p>
+            <p><a href="contact.html">Nous rejoindre</a></p>
           </div>
           <div class="col bloc-col-footer">
             <h5>EXPERTISES</h5>
-            <p><a href="#">Conseil en stratégie digitale</a></p>
-            <p><a href="#">Design et UX</a></p>
-            <p><a href="#">Développement web</a></p>
-            <p><a href="#">Application mobile</a></p>
-            <p><a href="#">E-commerce</a></p>
+            <p><a href="expertise.html">Conseil en stratégie digitale</a></p>
+            <p><a href="expertise.html">Design et UX</a></p>
+            <p><a href="expertise.html">Développement web</a></p>
+            <p><a href="expertise.html">Application mobile</a></p>
+            <p><a href="expertise.html">E-commerce</a></p>
           </div>
           <div class="col last-col-footer">
             <h5>LES AGENCES ACSEO</h5>
-            <p><a href="#">L'agence d'Aix-en-Provence</a></p>
-            <p><a href="#">L'agence de Paris</a></p>
-            <p><a href="#">L'agence de Montpellier</a></p>
-            <p><a href="#">Équipe</a></p>
+            <p><a href="agences.html">L'agence d'Aix-en-Provence</a></p>
+            <p><a href="agences.html">L'agence de Paris</a></p>
+            <p><a href="agences.html">L'agence de Montpellier</a></p>
+            <p><a href="equipe.html">Équipe</a></p>
           </div>
         </div>
       </div>
@@ -162,7 +164,6 @@
       </div>
     </div>
     <!--End of Footer-->
-    
 
     <!--********* JavaScript files ********-->
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
